fix(ui): fix warning badge contrast

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -2319,6 +2319,10 @@ kbd {
 .badge-danger {
   background-color: #ac2109;
 }
+.badge.text-bg-warning {
+  color: #ffffd0 !important;
+  background-color: #796034 !important;
+}
 .invalid-format {
   text-decoration-color: currentcolor;
 }
